# deszo_english_app_epub_content_extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Makefile  README.md  architecture.en.md  architecture.md  epub_content_extractor_architecture.md  epub_content_extractor_config.schema.json  mkdocs.yml
docs/architecture/: epub_content_extractor.schema.json  epub_content_extractor_architecture.md
docs/architecture/schema/: epub_content_extractor_config.v2.2.schema.json  epub_content_extractor_diagnostic_registry.v2.2.json  epub_content_extractor_diagnostic_registry.v2.2.schema.json  epub_content_extractor_diagnostic_registry.v3.0.schema.json  epub_content_extractor_error_registry.v2.2.json  epub_content_extractor_error_registry.v2.2.schema.json  epub_content_extractor_error_registry.v3.0.json  (+4 more)
docs/docs/: architecture.md  changelog.md  compatibility.md  configuration.md  diagnostics.md  examples.md  how-to-start.md  html-viewing-guide.md  index.md  input-output-contract.md  post-implementation-validation.md  public-api.md  security-archive-policy.md  source-of-truth.md  testing-guide.md  validation-guide.md
docs/docs/api/: classes.md  exceptions.md  index.md  (+2 more)
docs/examples/: batch_usage.py  error_handling.py  how_to_start.py  public_api_examples.py
docs/guidelines/: cli_transform_module_guidelines.md  python_module_standarts.md
docs/testing/: epub_content_extractor_golden_acceptance_manifest.v2.2.json  epub_content_extractor_golden_acceptance_manifest.v3.0.json  epub_content_extractor_test_coverage_manifest.v3.0.json  epub_content_extractor_testing.md
docs/tools/: run_mutation_probes.py  validate_against_implementation.py  validate_contract_shape.py  validate_examples_metadata.py  validate_manifest_hashes.py  validate_markdown_paths.py  validate_mutation_probe_manifest.py  validate_static_docs_package.py
formal/: ExtractorSpec.v  _CoqProject
src/epub_content_extractor/: __init__.py  cli.py  config.py  exceptions.py  extractor.py  models.py  runtime_metadata.py  schema_utils.py
tests/: test_extractor.py
(+62 files in other folders)
