[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub-content-extractor"
version = "0.1.0"
description = "Extract clean linear text from EPUB files while preserving semantic structure."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Non-commercial use only" }
authors = [
    { name = "DESZO English App" }
]
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "regex>=2023.0.0",
    "ftfy>=6.1",
    "rapidfuzz>=3.0",
    "readability-lxml>=0.8",
]

[project.scripts]
epub-content-extractor = "epub_content_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
