[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub-content-extractor"
version = "0.1.0"
description = "Extract clean linear text from EPUB files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Non-commercial use only" }
authors = [
    { name = "DESZO English App" }
]
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "regex>=2023.0.0",
    "ftfy>=6.1",
    "rapidfuzz>=3.0",
    "readability-lxml>=0.8",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
epub-content-extractor = "epub_content_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Third-party packages used here do not ship complete type information.
module = [
    "bs4.*",
    "ebooklib.*",
    "ftfy.*",
    "rapidfuzz.*",
    "regex",
    "regex.*",
]
ignore_missing_imports = true
